--- a/Day_7.ipynb
+++ b/Day_7.ipynb
@@ -94,12 +94,13 @@
    "id": "bfd7e71b-e604-41bb-a2a6-704615f1a655",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:21.738654Z",
-     "iopub.status.busy": "2022-12-07T18:23:21.738170Z",
-     "iopub.status.idle": "2022-12-07T18:23:21.748509Z",
-     "shell.execute_reply": "2022-12-07T18:23:21.747128Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:21.738579Z"
-    }
+     "iopub.execute_input": "2022-12-08T05:10:47.030422Z",
+     "iopub.status.busy": "2022-12-08T05:10:47.029512Z",
+     "iopub.status.idle": "2022-12-08T05:10:47.050788Z",
+     "shell.execute_reply": "2022-12-08T05:10:47.048406Z",
+     "shell.execute_reply.started": "2022-12-08T05:10:47.030311Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -112,11 +113,11 @@
    "id": "1467037a-d777-403e-a53d-e8d2873e99e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:22.708816Z",
-     "iopub.status.busy": "2022-12-07T18:23:22.708343Z",
-     "iopub.status.idle": "2022-12-07T18:23:22.713833Z",
-     "shell.execute_reply": "2022-12-07T18:23:22.712916Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:22.708725Z"
+     "iopub.execute_input": "2022-12-08T05:10:47.456889Z",
+     "iopub.status.busy": "2022-12-08T05:10:47.456506Z",
+     "iopub.status.idle": "2022-12-08T05:10:47.462274Z",
+     "shell.execute_reply": "2022-12-08T05:10:47.460987Z",
+     "shell.execute_reply.started": "2022-12-08T05:10:47.456833Z"
     },
     "tags": []
    },
@@ -148,11 +149,11 @@
    "id": "64c65157-d1f7-4db3-a8df-d1bd9d78a2c8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:23.363820Z",
-     "iopub.status.busy": "2022-12-07T18:23:23.363464Z",
-     "iopub.status.idle": "2022-12-07T18:23:23.372361Z",
-     "shell.execute_reply": "2022-12-07T18:23:23.371483Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:23.363791Z"
+     "iopub.execute_input": "2022-12-08T05:10:48.687414Z",
+     "iopub.status.busy": "2022-12-08T05:10:48.686932Z",
+     "iopub.status.idle": "2022-12-08T05:10:48.695780Z",
+     "shell.execute_reply": "2022-12-08T05:10:48.694798Z",
+     "shell.execute_reply.started": "2022-12-08T05:10:48.687380Z"
     },
     "tags": []
    },
@@ -179,6 +180,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2e8e1c14-f105-4c25-a09d-1e2768de4de3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-08T05:11:04.735386Z",
+     "iopub.status.busy": "2022-12-08T05:11:04.734946Z",
+     "iopub.status.idle": "2022-12-08T05:11:04.740654Z",
+     "shell.execute_reply": "2022-12-08T05:11:04.739705Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:04.735332Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def sort_by_depth(lst: List[str], reverse=True) -> List[str]:\n",
+    "    return sorted(lst, key=lambda x: len(x.split(separator)), reverse=reverse)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "062bff71-c6f2-4c9c-9658-3e4d29ebb98c",
    "metadata": {
@@ -196,15 +216,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b9ea70c2-27a8-469d-9f38-8dddfde8b981",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:24.133005Z",
-     "iopub.status.busy": "2022-12-07T18:23:24.132310Z",
-     "iopub.status.idle": "2022-12-07T18:23:24.146053Z",
-     "shell.execute_reply": "2022-12-07T18:23:24.145272Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:24.132967Z"
+     "iopub.execute_input": "2022-12-08T05:11:22.436843Z",
+     "iopub.status.busy": "2022-12-08T05:11:22.436522Z",
+     "iopub.status.idle": "2022-12-08T05:11:22.442607Z",
+     "shell.execute_reply": "2022-12-08T05:11:22.441872Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:22.436814Z"
     },
     "tags": []
    },
@@ -224,26 +244,26 @@
        " '//dzbfsf/tllwm/smnslwd/tlms/ptzptl/hsp/rjvmwmgm/tlms']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(list(tree.keys()), key=lambda x: len(x.split(separator)), reverse=True)[:10]"
+    "sort_by_depth(list(tree.keys()))[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "313f2313-12a6-4b9d-94ee-8a1e9c2a16fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:24.671237Z",
-     "iopub.status.busy": "2022-12-07T18:23:24.670907Z",
-     "iopub.status.idle": "2022-12-07T18:23:24.683623Z",
-     "shell.execute_reply": "2022-12-07T18:23:24.682698Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:24.671209Z"
+     "iopub.execute_input": "2022-12-08T05:11:24.468661Z",
+     "iopub.status.busy": "2022-12-08T05:11:24.468255Z",
+     "iopub.status.idle": "2022-12-08T05:11:24.479461Z",
+     "shell.execute_reply": "2022-12-08T05:11:24.478604Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:24.468633Z"
     },
     "tags": []
    },
@@ -253,13 +273,7 @@
     "used_folders = []\n",
     "\n",
     "\n",
-    "def sort_by_depth(lst: List[str], reverse=True) -> List[str]:\n",
-    "    return sorted(list(lst), key=lambda x: len(x.split(separator)), reverse=reverse)\n",
-    "\n",
-    "\n",
-    "for folder in sorted(\n",
-    "    list(tree.keys()), key=lambda x: len(x.split(separator)), reverse=True\n",
-    "):\n",
+    "for folder in sort_by_depth(list(tree.keys())):\n",
     "    items = tree[folder]\n",
     "    size = 0\n",
     "    for item in items:\n",
@@ -279,15 +293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "55277dcf-e2c0-4613-8d9c-8909a85fb6d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:25.234064Z",
-     "iopub.status.busy": "2022-12-07T18:23:25.233367Z",
-     "iopub.status.idle": "2022-12-07T18:23:25.241802Z",
-     "shell.execute_reply": "2022-12-07T18:23:25.240935Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:25.234024Z"
+     "iopub.execute_input": "2022-12-08T05:11:25.271488Z",
+     "iopub.status.busy": "2022-12-08T05:11:25.271124Z",
+     "iopub.status.idle": "2022-12-08T05:11:25.277975Z",
+     "shell.execute_reply": "2022-12-08T05:11:25.276779Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:25.271457Z"
     },
     "tags": []
    },
@@ -298,7 +312,7 @@
        "1334506"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "b137610a-31cf-4407-8c64-f3e2b0599916",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:25.989480Z",
-     "iopub.status.busy": "2022-12-07T18:23:25.989117Z",
-     "iopub.status.idle": "2022-12-07T18:23:25.993413Z",
-     "shell.execute_reply": "2022-12-07T18:23:25.992433Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:25.989451Z"
+     "iopub.execute_input": "2022-12-08T05:11:25.778022Z",
+     "iopub.status.busy": "2022-12-08T05:11:25.777501Z",
+     "iopub.status.idle": "2022-12-08T05:11:25.782993Z",
+     "shell.execute_reply": "2022-12-08T05:11:25.782041Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:25.777950Z"
     },
     "tags": []
    },
@@ -359,15 +373,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "44a2f65e-0969-447f-b435-b10f279c549f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:26.588978Z",
-     "iopub.status.busy": "2022-12-07T18:23:26.588421Z",
-     "iopub.status.idle": "2022-12-07T18:23:26.593145Z",
-     "shell.execute_reply": "2022-12-07T18:23:26.591994Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:26.588912Z"
+     "iopub.execute_input": "2022-12-08T05:11:27.512100Z",
+     "iopub.status.busy": "2022-12-08T05:11:27.511724Z",
+     "iopub.status.idle": "2022-12-08T05:11:27.516037Z",
+     "shell.execute_reply": "2022-12-08T05:11:27.515009Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:27.512067Z"
     },
     "tags": []
    },
@@ -379,15 +393,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "e1527590-e989-4d9a-af02-2176e2a3cc10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:27.020606Z",
-     "iopub.status.busy": "2022-12-07T18:23:27.020165Z",
-     "iopub.status.idle": "2022-12-07T18:23:27.025011Z",
-     "shell.execute_reply": "2022-12-07T18:23:27.023996Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:27.020552Z"
+     "iopub.execute_input": "2022-12-08T05:11:28.224357Z",
+     "iopub.status.busy": "2022-12-08T05:11:28.223993Z",
+     "iopub.status.idle": "2022-12-08T05:11:28.229002Z",
+     "shell.execute_reply": "2022-12-08T05:11:28.227571Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:28.224328Z"
     },
     "tags": []
    },
@@ -399,15 +413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "b7e6dbc9-d177-40a1-bad0-7b3d4cf74a43",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:27.198862Z",
-     "iopub.status.busy": "2022-12-07T18:23:27.198493Z",
-     "iopub.status.idle": "2022-12-07T18:23:27.204715Z",
-     "shell.execute_reply": "2022-12-07T18:23:27.203898Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:27.198832Z"
+     "iopub.execute_input": "2022-12-08T05:11:28.454545Z",
+     "iopub.status.busy": "2022-12-08T05:11:28.454181Z",
+     "iopub.status.idle": "2022-12-08T05:11:28.459624Z",
+     "shell.execute_reply": "2022-12-08T05:11:28.458666Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:28.454516Z"
     },
     "tags": []
    },
@@ -418,7 +432,7 @@
        "6975962"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,15 +443,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "1c7a529d-5838-40fe-8092-087bd70eb5bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:27.353140Z",
-     "iopub.status.busy": "2022-12-07T18:23:27.352693Z",
-     "iopub.status.idle": "2022-12-07T18:23:27.357187Z",
-     "shell.execute_reply": "2022-12-07T18:23:27.356350Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:27.353107Z"
+     "iopub.execute_input": "2022-12-08T05:11:29.595178Z",
+     "iopub.status.busy": "2022-12-08T05:11:29.594667Z",
+     "iopub.status.idle": "2022-12-08T05:11:29.600034Z",
+     "shell.execute_reply": "2022-12-08T05:11:29.598985Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:29.595138Z"
     },
     "tags": []
    },
@@ -452,15 +466,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "28f737c6-fc5e-4c69-b58d-ca0b5c6d3d91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:27.811164Z",
-     "iopub.status.busy": "2022-12-07T18:23:27.810699Z",
-     "iopub.status.idle": "2022-12-07T18:23:27.823726Z",
-     "shell.execute_reply": "2022-12-07T18:23:27.821473Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:27.811122Z"
+     "iopub.execute_input": "2022-12-08T05:11:31.690662Z",
+     "iopub.status.busy": "2022-12-08T05:11:31.690176Z",
+     "iopub.status.idle": "2022-12-08T05:11:31.697391Z",
+     "shell.execute_reply": "2022-12-08T05:11:31.696518Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:31.690628Z"
     },
     "tags": []
    },
@@ -479,7 +493,7 @@
        " '/': 40000000}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,15 +505,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "091dc5b9-8e63-4811-8145-9a927c3b796b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:28.173158Z",
-     "iopub.status.busy": "2022-12-07T18:23:28.172511Z",
-     "iopub.status.idle": "2022-12-07T18:23:28.178415Z",
-     "shell.execute_reply": "2022-12-07T18:23:28.177498Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:28.173127Z"
+     "iopub.execute_input": "2022-12-08T05:11:32.223936Z",
+     "iopub.status.busy": "2022-12-08T05:11:32.223421Z",
+     "iopub.status.idle": "2022-12-08T05:11:32.230769Z",
+     "shell.execute_reply": "2022-12-08T05:11:32.230014Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:32.223898Z"
     },
     "tags": []
    },
@@ -510,7 +524,7 @@
        "('//dzbfsf/tllwm/smnslwd/tlms/ptzptl', 7421137)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,15 +535,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "76dc22e9-8800-4b9c-882f-f95542c2af90",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:28.936170Z",
-     "iopub.status.busy": "2022-12-07T18:23:28.935602Z",
-     "iopub.status.idle": "2022-12-07T18:23:28.942071Z",
-     "shell.execute_reply": "2022-12-07T18:23:28.941428Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:28.936129Z"
+     "iopub.execute_input": "2022-12-08T05:11:32.776976Z",
+     "iopub.status.busy": "2022-12-08T05:11:32.776531Z",
+     "iopub.status.idle": "2022-12-08T05:11:32.783424Z",
+     "shell.execute_reply": "2022-12-08T05:11:32.782645Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:32.776940Z"
     },
     "tags": []
    },
@@ -540,7 +554,7 @@
        "7421137"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,15 +566,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "329672f5-3d28-45c3-ab59-a3caa535a20c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-07T18:23:29.487041Z",
-     "iopub.status.busy": "2022-12-07T18:23:29.486071Z",
-     "iopub.status.idle": "2022-12-07T18:23:29.491987Z",
-     "shell.execute_reply": "2022-12-07T18:23:29.490763Z",
-     "shell.execute_reply.started": "2022-12-07T18:23:29.486997Z"
+     "iopub.execute_input": "2022-12-08T05:11:33.413079Z",
+     "iopub.status.busy": "2022-12-08T05:11:33.411912Z",
+     "iopub.status.idle": "2022-12-08T05:11:33.416724Z",
+     "shell.execute_reply": "2022-12-08T05:11:33.415756Z",
+     "shell.execute_reply.started": "2022-12-08T05:11:33.412999Z"
     },
     "tags": []
    },
